--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,13 @@ Login
             <input class="form-control" name="username" type="text" placeholder="Enter Username" required autofocus>
             <label class="mt-2" for="password">Password:</label>
             <input class="form-control" name="password" type="password" placeholder="Enter Password" required>
-            <button type="submit" class="btn btn-primary mt-3">Login</button>
+            <button type="submit" class="btn btn-primary my-3">Login</button>
+        </form>
+        <form action="/login" method="post">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+            <input type="hidden" name="username" value="DemoUser" />
+            <input type="hidden" name="password" value="123456789Demo!" />
+            <button class="btn" type="submit">Login as Demo User</button>
         </form>
     </div>
 </div>
