--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,12 +7,12 @@ Contact
 {% block body %}
 <div class="container d-flex justify-content-center align-items-center mt-4" style="margin-bottom: 15%;">
     <div class="col-xl-6 col-lg-8 col-md-10 col-sm-12 col-12 justify-content-center" style="text-align: left; font-size: 1.1rem;">
-        <form action="/contact" method="post">
+        <form action="/contact" method="post" id="email_req">
             <h2 class="mb-3"><b>Contact Me:</b></h2>
             {% with messages = get_flashed_messages() %}
-            {% for message in messages %}
-            <p style="color:green;">{{ message }}</p>
-            {% endfor %}
+                {% for message in messages %}
+                    {{ message|safe }}
+                {% endfor %}
             {% endwith %}
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <label for="name">Full Name:</label>
@@ -21,6 +21,7 @@ Contact
             <input class="form-control" type="email" required placeholder="Enter Email" name="email"><br>
             <label for="textarea">Comments:</label>
             <textarea id="editor" name="body" requirede></textarea>
+            <div class="g-recaptcha mt-3" data-sitekey="6LcEjgUoAAAAALnWh3Et6irIcIqaMGzfw_78c9fL"></div>
             <button type="submit" class="btn btn-primary mt-3">Send</button>
         </form>
     </div>
